add left padding

--- a/in_store_tomorrow.html
+++ b/in_store_tomorrow.html
@@ -8,6 +8,7 @@
     <title>明天卖啥？</title>
 
     <style>
+        p{padding: 0px 0px 0px 20px ;}
         .tooltip {
             position: relative;
             display: inline-block;
