--- a/tftf-chars.html
+++ b/tftf-chars.html
@@ -195,7 +195,7 @@
 <h5 id="能力-1">能力</h5>
 <ul>
 <li>自适应型的规避，可以在受到攻击时有针对性地脱身。</li>
-<li>每击倒敌人一次堆积一层永久加攻，最大15层。</li>
+<li>每击倒敌人一次堆积一层永久加攻，最大20层（原为15层，后暗改）。</li>
 <li>S1没有额外效果，适用于堆加攻。S2和S3配有震击，对护甲越高的敌人震击强度越高。S2比S3的效果更好。</li>
 <li>每个死亡的队友让大黄蜂加攻，所以在推图中，上得越晚越好。</li>
 </ul>
@@ -550,7 +550,12 @@
 <li>防御的格挡精通+15%，对地面载具的机器人再+15%</li>
 <li>适时格挡刷新所有近战增益。适时格挡地面载具机器人的近战可以获得10%的近战加成并弹开对手。也就是惊天雷也有搅拌者/天火们的能力。</li>
 </ul>
-<p>三个S技的动作与红蜘蛛完全相同，但效果差别巨大： - S1：第一拳命中后刷新所有近战增益，后续每一发射击命中获得一层10%的近战加成2秒。 - S2：命中刷新所有近战增益。每层增益+2%伤害。 - S3：施加相当于攻击力60~100%的震击6秒。惊天雷身上每层增益+2%震击伤害。敌人身上每层增益+5%震击伤害。</p>
+<p>三个S技的动作与红蜘蛛完全相同，但效果差别巨大：</p>
+<ul>
+<li>S1：第一拳命中后刷新所有近战增益，后续每一发射击命中获得一层10%的近战加成2秒。</li>
+<li>S2：命中刷新所有近战增益。每层增益+2%伤害。</li>
+<li>S3：施加相当于攻击力60~100%的震击6秒。惊天雷身上每层增益+2%震击伤害。敌人身上每层增益+5%震击伤害。</li>
+</ul>
 <h5 id="招牌-13">招牌</h5>
 <ul>
 <li>在身上没有减益时近战攻击每击中5次获得5~20%的近战加成7秒。</li>
@@ -558,7 +563,11 @@
 <li>战斗开始时，敌人如果有攻击加成（来自精通，模块或能力），惊天雷也会给自己加攻（每一级招牌加0.15%）</li>
 </ul>
 <h5 id="协同-13">协同</h5>
-<p>惊天雷的协同主要是授益他人： - 搭配红蜘蛛/喷气机时，提升队中霸天虎成员的远程攻击的伤害与护甲穿透力。 - 搭配红蜘蛛/喷气机/碾碎器/狂飙/黄蜂勇士/风刃/天火时，加5~25%的规避克制。</p>
+<p>惊天雷的协同主要是授益他人：</p>
+<ul>
+<li>搭配红蜘蛛/喷气机时，提升队中霸天虎成员的远程攻击的伤害与护甲穿透力。</li>
+<li>搭配红蜘蛛/喷气机/碾碎器/狂飙/黄蜂勇士/风刃/天火时，加5~25%的规避克制。</li>
+</ul>
 <h5 id="短板-13">短板</h5>
 <p>惊天雷整体优势巨大，没有明显短板。不过要注意侧闪的霸体并没有足够的时间马上反击。</p>
 <h4 id="推荐打法-13">推荐打法</h4>
