加入纯5星水晶

--- a/pop_crystal.html
+++ b/pop_crystal.html
@@ -78,6 +78,7 @@
         <select id="crystal_type">
             <option>10个高等机器人水晶</option>
             <option>10个3~5星土豪水晶</option>
+            <option>10个5星水晶</option>
             <option>10个金轮水晶（含5星大/小黄蜂）</option>
             <option>10个乖巧水晶（含4星大/小黄蜂）</option>
         </select><br />
