更新首页与明天卖啥页面

--- a/in_store_tomorrow.html
+++ b/in_store_tomorrow.html
@@ -76,6 +76,10 @@
     <script type="text/javascript">
         document.getElementById('todayInStore').innerHTML = '突袭商店商品为：' + getItems(allItems_cn, item_prices, true).item;
     </script>
+    <p id="itemPriceCurrent"></p> <br />
+    <script type="text/javascript">
+        document.getElementById('itemPriceCurrent').innerHTML = '<strong>总价格为：</strong>' + getItems(allItems_cn, item_prices, true).price + ' = <strong>' + eval(getItems(allItems_cn, item_prices, false).price) / 10000 + ' 万</strong>突袭币';
+    </script>
     <p id="tomorrowDate"></p> <br />
     <script type="text/javascript">
         document.getElementById('tomorrowDate').innerHTML = '<strong>明天是' + todayis(false) + '</strong>';
