--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
 
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+    <meta charset="utf-8">
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
     <title>百炼为战工具小站</title>
+    <style>
+        .title {
+            text-align: center;
+        }
+    </style>
 </head>
+<!-- <div style="text-align: center;"> -->
 
-<body>
+<h1 class="title">百炼为战信息小站</h2>
+    <!-- </div> -->
+<ul>
+    <li><a href="tftf-chars.html">全人物解析</a></li>
+    <li><a href="tftf-masteries.html">精通解析</a></li>
+    <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
+    <li><a href="calculator_cn.html">锻造计算器</a></li>
+    <li><a href="pop_crystal.html">开水晶模拟器</a></li>
+    <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
+    <li><a href="https://pan.baidu.com/s/16ZuCw0lhmioIsSPhQIWthg">安卓乱码补丁（提取码：7zd8）</a></li>
+</ul>
 
-</body>
+制作分享：翻译官<a href="mailto:kmc.best@qq.com">（联系邮箱）</a>
+    <body>
+
+    </body>
+
 </html>
