--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
 
     <title>百炼为战工具小站</title>
     <style>
+        p {
+            padding: 0px 20px 0px 20px;
+        }
+
         .title {
             text-align: center;
         }
@@ -18,17 +23,18 @@
 
 <h1 class="title">百炼为战信息小站</h2>
     <!-- </div> -->
-<ul>
-    <li><a href="tftf-chars.html">全人物解析</a></li>
-    <li><a href="tftf-masteries.html">精通解析</a></li>
-    <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
-    <li><a href="calculator_cn.html">锻造计算器</a></li>
-    <li><a href="pop_crystal.html">开水晶模拟器</a></li>
-    <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
-    <li><a href="https://pan.baidu.com/s/16ZuCw0lhmioIsSPhQIWthg">安卓乱码补丁（提取码：7zd8）</a></li>
-</ul>
+    <ul>
+        <li><a href="tftf-chars.html">全人物解析</a></li>
+        <li><a href="tftf-masteries.html">精通解析</a></li>
+        <li><a href="in_store_tomorrow.html">突袭商店明日商品</a></li>
+        <li><a href="calculator_cn.html">锻造计算器</a></li>
+        <li><a href="pop_crystal.html">开水晶模拟器</a></li>
+        <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
+        <li><a href="https://pan.baidu.com/s/16ZuCw0lhmioIsSPhQIWthg">安卓乱码补丁（提取码：7zd8）</a></li>
+    </ul>
 
-制作分享：翻译官<a href="mailto:kmc.best@qq.com">（联系邮箱）</a>
+    制作分享：翻译官<a href="mailto:kmc.best@qq.com">（联系邮箱）</a>
+
     <body>
 
     </body>
