--- a/in_store_tomorrow.html
+++ b/in_store_tomorrow.html
@@ -78,7 +78,7 @@
     </script>
     <p id="itemPriceCurrent"></p> <br />
     <script type="text/javascript">
-        document.getElementById('itemPriceCurrent').innerHTML = '<strong>总价格为：</strong>' + getItems(allItems_cn, item_prices, true).price + ' = <strong>' + eval(getItems(allItems_cn, item_prices, false).price) / 10000 + ' 万</strong>突袭币';
+        document.getElementById('itemPriceCurrent').innerHTML = '<strong>总价格为：</strong>' + getItems(allItems_cn, item_prices, true).price + ' = <strong>' + eval(getItems(allItems_cn, item_prices, true).price) / 10000 + ' 万</strong>突袭币';
     </script>
     <p id="tomorrowDate"></p> <br />
     <script type="text/javascript">
