新增五星人物动态

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><a href="pop_crystal.html">开水晶模拟器</a></li>
         <li><a href="https://docs.qq.com/sheet/DVEJHT29KZ1d6WmZ6">填写邮箱，及时收到安卓更新包</a></li>
         <li><a href="https://pan.baidu.com/s/16ZuCw0lhmioIsSPhQIWthg">安卓乱码补丁（提取码：7zd8）</a></li>
+        <li><a href="http://naotu.baidu.com/file/f8a36ba944301ca7747207fb975303bf?token=81c6e94093865e04">五星人物动态</a></li>
     </ul>
 
     制作分享：翻译官<a href="mailto:kmc.best@qq.com">（联系邮箱）</a>
