--- a/tftf-chars.html
+++ b/tftf-chars.html
@@ -209,7 +209,7 @@
 <h5 id="短板-1">短板</h5>
 <p>作为战术系，对付斗士们的护甲没有什么好办法，是大黄蜂最大的短板。而且他整体的设计更像一个侦查（也符合大黄蜂侦察兵的身份），在平时要注意出规避的时候要迅速反击，不要因为出规避反而打乱自己的部署。官方预计在8.0中将要加强这个大人气角色。</p>
 <h5 id="调整">8.0调整</h5>
-<p>S1每一击都可以破甲了，三下每下概率60%。这让大黄蜂终于能对付斗士了。</p>
+<p>S1每一击都可以破甲了，三次攻击每次概率60%——这让大黄蜂终于能对付斗士了。</p>
 <h4 id="推荐打法-1">推荐打法</h4>
 <h5 id="短战斗-1">短战斗</h5>
 <p>近战缠斗，多用重击，围绕S1或S2进行输出。</p>
@@ -539,8 +539,8 @@
 <h5 id="能力-13">能力</h5>
 <ul>
 <li>惊天雷不产生任何暴击。原本要触发的任何暴击都变为相当于此次暴击伤害8%的近战增益。</li>
-<li>惊天雷重击时净化以下减益：震击/燃烧/流血/逆火/目眩。这让惊天雷不但单兵就相当于觉醒钢锁，还超越了动物园的协同，因为连蝎子的独门绝技都不怕。<strong>注意：由于游戏的bug，惊天雷无法净化路障的逆火。</strong></li>
-<li>每净化一个减益且惊天雷重击命中，则施加一层7秒内80%攻击的燃烧。<strong>注意：由于游戏的bug，目前此功能不正常（不能施加燃烧）</strong></li>
+<li>惊天雷重击时净化以下减益：震击/燃烧/流血/逆火/目眩。这让惊天雷不但单兵就相当于觉醒钢锁，还超越了动物园的协同，因为连蝎子的独门绝技都不怕。</li>
+<li>每净化一个减益且惊天雷重击命中，则施加一层7秒内80%攻击的燃烧。</li>
 <li>净化减益时获得一个3~8%的近战增益，持续7秒。</li>
 <li>近战攻击：刷新所有近战增益过期时间。近战攻击后侧闪也能刷新。</li>
 <li>侧闪的时候被近战击中会变得不可阻挡，不过持续时间并不长，可以防止在近战缠斗中走位失误被对手抓住。</li>
@@ -574,7 +574,7 @@
 <h5 id="短战斗-12">短战斗</h5>
 <p>惊天雷作为斗士，拥有强大的净化能力，加攻的技能让他尤其适合近战缠斗，并且适时格挡、侧闪被动霸体和重击能防都让他在近战中不容易被敌人打回头。短战斗时围绕4连一重击和压起身，反复使用S1堆高伤害。</p>
 <h5 id="长战斗-12">长战斗</h5>
-<p>在短战斗的基础上多保障自己少吃对方攻击，切不可为了刷新加成而盲目攻得太凶。如果在S2快出来时没有堆到太多，建议不如换成两个S1划算。在面对buff多的对手可以使用S3。</p>
+<p>在短战斗的基础上多保障自己少吃对方攻击，切不可为了刷新加成而盲目攻得太凶。如果在S2快出来时没有堆到太多加成，建议不如换成两个S1划算。在面对buff多的对手可以使用S3。</p>
 <h4 id="基地防守-13">基地防守</h4>
 <p>由于电脑AI不太懂得合理利用惊天雷净化和加攻的能力，加上惊天雷在突袭时优势巨大，基地防守不是惊天雷的专长。由于他能挡住大部分重击，所以如果配折射镜模块，可以有效防止远程重击角色用重击放风筝。</p>
 <!--/Note-->
@@ -841,6 +841,8 @@
 <h5 id="短板-22">短板</h5>
 <p>其实路障整体的设计思路是不错的，攻击力全人物排名第6。主要问题还是身板脆，血量倒数第4，虽然有倒地规避，但是吃一串连击或者被DOT了实在很疼。组队方面除了跟爆威和碾碎器，也没有什么好的协同，或许也减少了他的使用场合。</p>
 <h4 id="推荐打法-22">推荐打法</h4>
+<p>路障的逆火虽然是他的标志性debuff，但电脑对手的思路清奇——既不会因为处于逆火状态就刻意不放招，也不会因为你想等着逆火伤害就乖乖给你放招。路障的逆火也不像蝎子，层数多了有触发逆火伤害和过期晕点/震击这三种想象空间，所以施加了逆火之后，要放平心态，就当它不存在，正常打。</p>
+<p>但这不表示就完全可以不用在意施加逆火，事实上，逆火和S2之间是可以互补的。在长战斗过程中，路障核心的思路是通过S2偷气，将自己的能量稳定在一格多，再反复攒出S2同时保证输出和控气。这个过程并不见得总是称心如意，例如对方先于你放掉了S技，自己一个S2下去没偷到多少气，双方都回到半格不到的初始状态。这时在点枪牵制的过程中如果对方露出破绽，我建议就点上三枪搏多几层逆火先，而不是两枪加5连，因为这样打对方很有可能在你2格气之前到达S2，很多人的S2就算骗出来也是有一定危险性的。路障最舒服的时候就是连招攒满S2的时候对方也刚刚过2格气，但立马就会被偷走，没有机会带着S2自由行动。</p>
 <h5 id="短战斗-21">短战斗</h5>
 <p>因为有倒地规避所以打法上可以十分强势，因为重击是远程，击倒后可以前冲压起身。围绕S2打输出。</p>
 <h5 id="长战斗-21">长战斗</h5>
