--- a/calculator_cn.html
+++ b/calculator_cn.html
@@ -236,7 +236,8 @@
 
     <h2 class="title">锻造结果</h2><br />
     <span id="forge_report"></span> <br />
-    <h2 class="title">锻造小贴士</h2><br />
+     <input type="button" name="takeNote" value="保存结果" onclick="copyResult()" />
+   <h2 class="title">锻造小贴士</h2><br />
     <p id="ftip"></p> <br />
     <script type="text/javascript">
         document.getElementById('ftip').innerHTML = getTip();
