--- a/calculator_cn.html
+++ b/calculator_cn.html
@@ -147,6 +147,13 @@
             <span class="tooltiptext">锻造时不满一级时剩余的经验</span>
         </div>
         <input type="number" min="0" id="fodder_remain_exp" value="0"><br />
+        黄金/矿比例：
+        <select id="gold_coeff">
+            <option selected="true">0.9787（混用两类矿的平均值）</option>
+            <option>0.884（理论最小值，仅使用200彩矿）</option>
+            <option>1.0529（理论最大值，仅使用5阶标准矿）</option>
+            <option>0.9079（彩矿平均值）</option>
+        </select>
         <br />
 
     </form>
@@ -224,13 +231,7 @@
         剩余经验：
         <input type="number" min="0" id="receiver_remain_exp" value="0"><br />
 
-        黄金/矿比例：
-        <select id="gold_coeff">
-            <option selected="true">0.9787（混用两类矿的平均值）</option>
-            <option>0.884（理论最小值，仅使用200彩矿）</option>
-            <option>1.0529（理论最大值，仅使用5阶标准矿）</option>
-            <option>0.9079（彩矿平均值）</option>
-        </select> <br />
+
         <input type="button" name="confirmAlter" value="计算" onclick="check()" />
 
     </form>
