--- a/calculator_cn.html
+++ b/calculator_cn.html
@@ -8,6 +8,10 @@
     <title>百炼为战锻造计算器</title>
 
     <style>
+        body {
+            margin-left: 5%;
+            margin-right: 5%;
+        }
         .tooltip {
             position: relative;
             display: inline-block;
@@ -238,7 +242,7 @@
 
 
 
-    <h2 class="title">锻造结果</h2><br />
+    <h2 class="title">锻造结果</h2>
     <span id="fodder_resource"></span> <br />
 
     <span id="forge_report"></span> <br />
