--- a/calculator_cn.html
+++ b/calculator_cn.html
@@ -123,14 +123,14 @@
             <option>战术-大黄蜂</option>
             <option>战术-狂飙</option>
             <option>战术-饿鲨</option>
-        </select><br />
+        </select><br>
         星等：
         <select id="fodder_star">
             <option>1</option>
             <option>2</option>
             <option selected="true">3</option>
             <option>4</option>
-        </select><br />
+        </select>
         阶：
         <select id="fodder_rank">
             <option>1</option>
@@ -138,13 +138,12 @@
             <option>3</option>
             <option selected="true">4</option>
             <option>5</option>
-        </select><br />
+        </select>
         <!-- Level: <span id="fodder_level_value" style="color:black;"></span>
         <br /> -->
         级： <input type="number" min="1" max="50" step="1" id="fodder_level" value="1">
         <br />
         招牌等级： <input type="number" min="0" max="100" step="1" id="fodder_sig" value="0">
-        <br />
         锻造等级： <input type="number" min="0" max="100" step="1" id="fodder_forgelevel" value="0">
         <br />
         <div class="tooltip">剩余经验（这是什么？）
@@ -221,7 +220,7 @@
             <option>3</option>
             <option>4</option>
             <option selected="true">5</option>
-        </select><br />
+        </select>
         <!-- 阶：
         <select id="receiver_rank">
             <option>1</option>
@@ -234,17 +233,11 @@
         <br />
         剩余经验：
         <input type="number" min="0" id="receiver_remain_exp" value="0"><br />
-
-
         <input type="button" name="confirmAlter" value="计算" onclick="check()" />
-
     </form>
-
-
 
     <h2 class="title">锻造结果</h2>
     <span id="fodder_resource"></span> <br />
-
     <span id="forge_report"></span> <br />
     <input type="button" name="takeNote" value="保存结果" onclick="copyResult()" />
     <h2 class="title">锻造小贴士</h2><br />
