--- a/pop_crystal.html
+++ b/pop_crystal.html
@@ -79,6 +79,7 @@
             <option>10个高等机器人水晶</option>
             <option>10个3~5星土豪水晶</option>
             <option>1个5星水晶</option>
+            <option>10个黑暗矩阵星水晶（含4、5星暗黑擎天柱与4星惊天雷）</option>
             <option>10个金轮水晶（含5星大/小黄蜂）</option>
             <option>10个乖巧水晶（含4星大/小黄蜂）</option>
             <option>10个三阶骑士水晶2.0</option>
