--- a/tftf-chars.html
+++ b/tftf-chars.html
@@ -110,6 +110,7 @@
 <p>《百炼为战》在画面、人物形象、游戏模式与动作设计方面均让人眼前一亮，尤其在变形金刚这个IP的游戏中属于佼佼者的类型，但游戏对系统要求高，频繁的卡顿与bug一直困扰并限制着新玩家入坑。运营思路的缺乏也让这个游戏始终只拥有十分小众的玩家。</p>
 <p>作为游戏的铁杆粉丝，我在游戏公测时入坑，一直玩到今天，经历了游戏中的各种变化，对这个游戏的感情很深。于是在这个游戏走到晚期，角色稳定下来之后，我想结合自己对角色的使用的理解，写一点心得与分析，没想到写出了好几万字。</p>
 <p>以下的内容均来自本人使用过程中的经验和与玩家群体交流的心得，感谢所有玩家对这个游戏和我本人的帮助。文中内容乃一家之言，供交流学习用，如有批评指正，欢迎来信： kmc.best@qq.com</p>
+<p>（最后更新：2019年8月12日）</p>
 <h2 id="术语与打法">术语与打法</h2>
 <!--Note-->
 <h3 id="术语">术语</h3>
@@ -288,9 +289,9 @@
 <h5 id="能力-4">能力</h5>
 <ul>
 <li>减益融合：战威的主要能力是特殊技之后充能重击（6秒充好给三发，用完再充）命中的减益融合（三个特殊技分别对应融合破甲/减攻/震击），面对斗士系尤其是猩猩队长时有极大的优势，同时要比战擎能更快地完成永久破甲，且不会触发猩猩的回血。</li>
-<li>中等攻击结束一套连击（右滑输入）能把未融合的减益过期时间刷新以便等待下一发充能炮命中。</li>
+<li>如果充能炮打完也没融合成功，可以在近战用中等攻击结束一套连击（右滑输入），把刷新未融合的减益过期时间，以便等待充能炮充满。</li>
 <li>血越少，被击倒后起身越有概率变得不可阻挡，一定程度上保证了残血时的健壮。</li>
-<li>S1施加10秒破甲，S2施加10秒减攻，S3施加30秒震击，这三个减益中融合到任何一个，都能让战斗的天平迅速倒向威震天一边。</li>
+<li>S1施加10秒破甲，S2施加10秒减攻，S3施加20秒震击，这三个减益中融合到任何一个，都能让战斗的天平迅速倒向威震天一边。尤其是S3，不但融合的时间足够长，而且S3之后充能炮无限使用，让战威像黄蜂半血以下一样多一个龟派放风筝的打法。</li>
 </ul>
 <h5 id="招牌-4">招牌</h5>
 <p>觉醒后的战威在近战中有概率能偷走对方身上的buff，对敌人的多种能力和模块加持均有良好的控制。战威的这个招牌可谓是“战术”二字的最佳写照。但是初始概率不高，要达到稳定触发的话比较吃招牌程序。</p>
@@ -383,29 +384,33 @@
 <!--Note-->
 <h4 id="特点分析-7">特点分析</h4>
 <p>在惊天雷之后，官方预告要放出一个“熟悉的面孔下波动着黑暗能量”的角色，玩家们纷纷猜测是黑擎（Nemesis Prime），毕竟又是个重涂。果然，2019年7月的特殊事件Boss便是他，而且和战擎一样，同属战术系。</p>
-<p>黑擎在发布时并没有获取渠道，以下能力来自于游戏内信息</p>
+<p>黑擎采用竞技场攒水晶和直接购买水晶（二重身水晶为2<sub>4星，黑暗矩阵水晶为3</sub>5星）的方式获得。</p>
 <h5 id="能力-7">能力</h5>
 <ul>
 <li>亚空间脉冲克隆器：对手获得近战或者护甲增益时，黑擎最高有25%的概率将其复制（有效时间与对手相同），每层黑暗能量+5%的概率。</li>
 <li>黑暗能量：黑擎开场后每10秒获得一层黑暗能量，最多10层。半血以下每7秒获得一层，15%血以下5秒。黑暗能力可以提高复制增益的概率、特殊技效果和重击伤害</li>
 <li>重击：驱散对方一层近战或护甲。每层黑暗能量+5%的重击伤害。</li>
 <li>S1：30%的概率将黑擎身上的减益复制到对手身上，每层黑暗能量+3%的概率。同时获得2层黑暗能量。</li>
-<li>S2：50%的概率驱散对手身上每个近战增益，并施加5%的减攻，持续4秒。每层黑暗能量+5%的概率；50%的概率驱散对手身上每个护甲增益，并施加5%的破甲，持续4秒。每层黑暗能量+5%的概率。另外：每驱散一个增益，要消耗三层黑暗能量。</li>
+<li>S2：50%的概率驱散对手身上每个近战增益，并施加5%的减攻，持续4秒。每层黑暗能量+5%的概率；50%的概率驱散对手身上每个护甲增益，并施加5%的破甲，持续4秒（经测试，对方没有护甲时也不会施加破甲）。每层黑暗能量+5%的概率。另外：每驱散一个增益，要消耗三层黑暗能量。</li>
 <li>S3：消耗所有黑暗能量。攻击结束后7秒内普攻破防，每层黑暗能量+0.5秒破防时间。</li>
 </ul>
 <h5 id="招牌-7">招牌</h5>
 <p>用特殊技伤害的x%给自己回血（觉醒75时回血23.7%）。这让黑擎拥有不俗的续航能力，毕竟特殊技的伤害不低，玩家又可以在连击中保证命中。</p>
 <h5 id="协同-7">协同</h5>
-<p>与战擎有协同，目前乱码看不出，据说是互相加攻。</p>
+<ul>
+<li>与战擎同时出战时，黑擎加护甲，战擎破甲能力提升。</li>
+<li>与惊破天同时出战时，增加黑暗能量的相关增益</li>
+<li>受益：搭配震荡波，黑擎的能量功率提升</li>
+<li>授益：提升狂飙的黑暗燃烧伤害</li>
+</ul>
 <h5 id="短板-7">短板</h5>
 <ul>
 <li>从目前特殊Boss的情况来看，黑擎的AI与战擎相同，即使配了回血模块，也只是多了一倍的战斗时间，一点威慑力也没有。</li>
-<li>如果交由玩家使用，黑擎并没有太大短板，无非是没有战擎的高输出高爆发。另外比起战擎，黑擎S3简直是天壤之别，难堪大用。</li>
+<li>如果交由玩家使用，黑擎并没有太大短板，无非是没有战擎的高输出高爆发。另外黑擎的S3简直难堪大用。</li>
 </ul>
 <h4 id="推荐打法-7">推荐打法</h4>
-<p>黑擎暂时无法获取，但由于动作和战擎完全相同，所以可以脑补出一些打法。</p>
 <p>首先复制能力是纯被动的，且取决于对方有没有buff，所以没有必要追求。黑暗能量的获取也是纯被动，没有必要为此拖延战斗时间。</p>
-<p>在面对汽车大师等buff型角色时，重击的驱散能力值得利用。</p>
+<p>在面对汽车大师、猩猩等buff型角色时，重击的驱散能力值得利用。</p>
 <h5 id="短战斗-7">短战斗</h5>
 <p>采用和战擎相似的打法，多用重击控制对方buff，主要围绕S2打输出，吃到debuff时用S1送走。</p>
 <h5 id="长战斗-7">长战斗</h5>
@@ -901,16 +906,24 @@
 <li>另外横炮的近战是7连击，一套拆光犀牛和科技鲨的盾没问题。</li>
 </ul>
 <h5 id="招牌-24">招牌</h5>
-<p>开局12秒给自己加气。5级加41.2%，100级加100%！短战斗中，横炮可以先声夺人打出S1，一旦打晕，很快又能有S1，运气好的话连晕两次战斗就结束了。</p>
+<p>开局12秒给自己加气。5级加41.2%，100级加<del>100%</del>（后调整为减半，100级加50%）。短战斗中，横炮可以先声夺人打出S1，一旦打晕，很快又能有S1，运气好的话连晕两次战斗就结束了。</p>
 <h5 id="协同-24">协同</h5>
 <ul>
 <li>搭配警车后横炮的重击可以堆积加攻buff。</li>
 <li>搭配幻影/战术黄/黄豹：闪避后下一击加攻。相当于“反击”与“枪手”两种精通的叠加。</li>
 </ul>
 <h5 id="短板-24">短板</h5>
-<p>横炮整体看上去没有太大问题，可能在dot和控气上稍有欠缺，但输出能力了得也是一种弥补。总体来说人气实在太低，也进入了8.0要加强的列表，期待曙光。</p>
+<p>横炮整体看上去没有太大问题，DOT和控气上稍有欠缺，但输出能力了得也是一种弥补。总体来说人气实在太低，也进入了8.0要加强的列表，期待曙光。</p>
 <h5 id="调整-6">8.0调整</h5>
 <p>基础暴击率+3.6%，基础暴击伤害+10%，S2的导弹100%施加燃烧。</p>
+<h5 id="年8月调整">2019年8月调整</h5>
+<p>在游戏进入通用人物币阶段后，老牌的角色一个个被卡邦拿来当月度人物卖，然而不但战擎、铁皮已经上架，连野牛、天火等都闪亮登场时，横炮作为第一批人物还没有出现。在2019年8月正式上架前，官方再次对横炮作出平衡性调整：</p>
+<ul>
+<li>被击倒只丢失5层暴击（之前是全丟）</li>
+<li>带着10层暴击打中S2，则会在一段时间内获得50%的暴击伤害加成</li>
+<li>重击命中净化身上的所有震击并刷新所有暴击伤害加成，侦查系拥有净化的不多，横炮这一调整让他在面对觉醒犀牛或者震击格挡时优势巨大</li>
+<li>招牌削弱，满觉醒只给50%的最大能量。虽然看上去是削弱，但由于高觉醒的横炮往往在电脑手上（配机器人资源、科技控制台），这一调整反倒降低了电脑横炮开局不久就出S3的机会，更像是有利玩家的改动。</li>
+</ul>
 <h4 id="推荐打法-24">推荐打法</h4>
 <p>横炮的连击数多（普攻7连，S技打击数都不少，加上有连晕），所以开启追星者精通会很受益。</p>
 <h5 id="短战斗-23">短战斗</h5>
