--- a/luaErrorBoard.html
+++ b/luaErrorBoard.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.js"></script>
     <script>
         $(document).ready(function () {
 
