--- a/tftf-radar-chart.html
+++ b/tftf-radar-chart.html
@@ -38,15 +38,15 @@
             tooltip: { trigger: 'item' },
             legend: {
                 data: ['震天尊', '黄豹', '警车', '战擎', '汽车大师', '震荡波', '斗擎', '千斤顶', '野牛', '风刃', '猩猩队长', '战威', '暗黑擎天柱', '横炮', '犀牛', '声波', '巨蝎勇士', '惊天雷', '碾碎器', '爵士', '录音机', '雷震', '幻影', '反冲', '小黄蜂', '惊破天', '天火', '钢锁', '狂飙', '恐龙勇士', '铁皮', '漂移', '救护车', '大黄蜂', '阿尔茜', '碎骨魔', '路障', '喷气机', '红蜘蛛', '热破', '黄蜂', '通天晓', '搅拌者', '爆威', '探长'],
-                selected: { '震天尊': false, '黄豹': false, '警车': false, '战擎': false, '汽车大师': false, '震荡波': false, '斗擎': false, '千斤顶': false, '野牛': false, '风刃': false, '猩猩队长': false, '战威': false, '暗黑擎天柱': false, '横炮': false, '犀牛': false, '声波': false, '巨蝎勇士': false, '惊天雷': false, '碾碎器': false, '爵士': false, '录音机': false, '雷震': false, '幻影': false, '反冲': false, '小黄蜂': false, '惊破天': false, '天火': false, '钢锁': false, '狂飙': false, '恐龙勇士': false, '铁皮': false, '漂移': false, '救护车': false, '大黄蜂': false, '阿尔茜': false, '碎骨魔': false, '路障': false, '喷气机': false, '红蜘蛛': false, '热破': false, '黄蜂': false, '通天晓': false, '搅拌者': false, '爆威': false, '探长': false },
+                selected: { '震天尊': false, '黄豹': false, '警车': false, '战擎': false, '汽车大师': false, '震荡波': false, '斗擎': false, '千斤顶': false, '野牛': false, '风刃': false, '猩猩队长': false, '战威': false, '暗黑擎天柱': false, '横炮': false, '犀牛': false, '声波': false, '巨蝎勇士': false, '惊天雷': false, '碾碎器': false, '爵士': false, '录音机': false, '雷震': false, '幻影': false, '反冲': false, '侦查蜂': false, '惊破天': false, '天火': false, '钢锁': false, '狂飙': false, '恐龙勇士': false, '铁皮': false, '漂移': false, '救护车': false, '战术蜂': false, '阿尔茜': false, '碎骨魔': false, '路障': false, '喷气机': false, '红蜘蛛': false, '热破': false, '黄蜂勇士': false, '通天晓': false, '搅拌者': false, '爆威': false, '探长': false },
                 width: '50%',
                 // selectedMode: 'multiple',
-                textStyle: { fontSize: 18 },
+                textStyle: { fontSize: 24 },
                 // height: '200px'
             },
             radar: {
                 // shape: 'circle',
-                radius: '50%',
+                radius: '80%',
                 name: {
                     textStyle: {
                         color: '#fff',
@@ -94,7 +94,7 @@
                     { name: '雷震', value: [8.11, 7.63, 7.19, 8.46, 9, 8,], },
                     { name: '幻影', value: [8.11, 7.37, 10, 9.38, 4, 4,], },
                     { name: '反冲', value: [9.73, 7.11, 7.81, 8.23, 5, 6,], },
-                    { name: '小黄蜂', value: [8.92, 7.11, 7.81, 9.15, 5, 8,], },
+                    { name: '侦查蜂', value: [8.92, 7.11, 7.81, 9.15, 5, 8,], },
                     { name: '惊破天', value: [9.73, 7.63, 7.19, 9.15, 5, 5,], },
                     { name: '天火', value: [8.11, 8.16, 8.13, 9.77, 7, 3,], },
                     { name: '钢锁', value: [8.92, 8.68, 6.25, 9.15, 5, 6,], },
@@ -103,14 +103,14 @@
                     { name: '铁皮', value: [8.38, 7.11, 7.19, 9.77, 5, 10,], },
                     { name: '漂移', value: [8.11, 7.37, 6.25, 9, 9, 9,], },
                     { name: '救护车', value: [7.84, 7.89, 7.19, 7.62, 7, 7,], },
-                    { name: '大黄蜂', value: [7.84, 7.63, 7.19, 8.08, 7, 7,], },
+                    { name: '战术蜂', value: [7.84, 7.63, 7.19, 8.08, 7, 7,], },
                     { name: '阿尔茜', value: [8.65, 6.84, 6.88, 8.92, 5, 9,], },
                     { name: '碎骨魔', value: [7.84, 6.84, 7.5, 9.54, 5, 9,], },
                     { name: '路障', value: [8.92, 7.11, 7.19, 9.08, 5, 5,], },
                     { name: '喷气机', value: [7.84, 7.11, 7.5, 8.92, 5, 6,], },
                     { name: '红蜘蛛', value: [7.3, 6.58, 9.06, 8.77, 5, 5,], },
                     { name: '热破', value: [7.84, 7.11, 7.19, 9.62, 5, 6,], },
-                    { name: '黄蜂', value: [7.84, 7.63, 6.25, 8, 5, 8,], },
+                    { name: '黄蜂勇士', value: [7.84, 7.63, 6.25, 8, 5, 8,], },
                     { name: '通天晓', value: [7.3, 7.89, 6.88, 8.85, 6, 5,], },
                     { name: '搅拌者', value: [7.3, 8.16, 7.19, 9.62, 5, 3,], },
                     { name: '爆威', value: [7.84, 8.42, 6.25, 7.31, 5, 5,], },
