--- a/tftf-radar-chart.html
+++ b/tftf-radar-chart.html
@@ -37,7 +37,7 @@
             },
             tooltip: { trigger: 'item' },
             legend: {
-                data: ['震天尊', '黄豹', '警车', '战擎', '汽车大师', '震荡波', '斗擎', '千斤顶', '野牛', '风刃', '猩猩队长', '战威', '暗黑擎天柱', '横炮', '犀牛', '声波', '巨蝎勇士', '惊天雷', '碾碎器', '爵士', '录音机', '雷震', '幻影', '反冲', '小黄蜂', '惊破天', '天火', '钢锁', '狂飙', '恐龙勇士', '铁皮', '漂移', '救护车', '大黄蜂', '阿尔茜', '碎骨魔', '路障', '喷气机', '红蜘蛛', '热破', '黄蜂', '通天晓', '搅拌者', '爆威', '探长'],
+                data: ['震天尊', '黄豹', '警车', '战擎', '汽车大师', '震荡波', '斗擎', '千斤顶', '野牛', '风刃', '猩猩队长', '战威', '暗黑擎天柱', '横炮', '犀牛', '声波', '巨蝎勇士', '惊天雷', '碾碎器', '爵士', '录音机', '雷震', '幻影', '反冲', '侦查蜂', '惊破天', '天火', '钢锁', '狂飙', '恐龙勇士', '铁皮', '漂移', '救护车', '战术蜂', '阿尔茜', '碎骨魔', '路障', '喷气机', '红蜘蛛', '热破', '黄蜂勇士', '通天晓', '搅拌者', '爆威', '探长'],
                 selected: { '震天尊': false, '黄豹': false, '警车': false, '战擎': false, '汽车大师': false, '震荡波': false, '斗擎': false, '千斤顶': false, '野牛': false, '风刃': false, '猩猩队长': false, '战威': false, '暗黑擎天柱': false, '横炮': false, '犀牛': false, '声波': false, '巨蝎勇士': false, '惊天雷': false, '碾碎器': false, '爵士': false, '录音机': false, '雷震': false, '幻影': false, '反冲': false, '侦查蜂': false, '惊破天': false, '天火': false, '钢锁': false, '狂飙': false, '恐龙勇士': false, '铁皮': false, '漂移': false, '救护车': false, '战术蜂': false, '阿尔茜': false, '碎骨魔': false, '路障': false, '喷气机': false, '红蜘蛛': false, '热破': false, '黄蜂勇士': false, '通天晓': false, '搅拌者': false, '爆威': false, '探长': false },
                 width: '50%',
                 // selectedMode: 'multiple',
