--- a/tftf-radar-chart.html
+++ b/tftf-radar-chart.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 </head>
 
-<body style="height: 100%; margin: 0">
+<body style="height: 150%; margin: 0">
     <div id="container" style="height: 100%"></div>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
     <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
@@ -37,8 +37,8 @@
             },
             tooltip: { trigger: 'item' },
             legend: {
-                data: ['震天尊', '黄豹', '警车', '战擎', '汽车大师', '震荡波', '斗擎', '千斤顶', '野牛', '风刃', '猩猩队长', '战威', '暗黑擎天柱', '横炮', '犀牛', '声波', '巨蝎勇士', '惊天雷', '碾碎器', '爵士', '录音机', '雷震', '幻影', '反冲', '侦查蜂', '惊破天', '天火', '钢锁', '狂飙', '恐龙勇士', '铁皮', '漂移', '救护车', '战术蜂', '阿尔茜', '碎骨魔', '路障', '喷气机', '红蜘蛛', '热破', '黄蜂勇士', '通天晓', '搅拌者', '爆威', '探长'],
-                selected: { '震天尊': false, '黄豹': false, '警车': false, '战擎': false, '汽车大师': false, '震荡波': false, '斗擎': false, '千斤顶': false, '野牛': false, '风刃': false, '猩猩队长': false, '战威': false, '暗黑擎天柱': false, '横炮': false, '犀牛': false, '声波': false, '巨蝎勇士': false, '惊天雷': false, '碾碎器': false, '爵士': false, '录音机': false, '雷震': false, '幻影': false, '反冲': false, '侦查蜂': false, '惊破天': false, '天火': false, '钢锁': false, '狂飙': false, '恐龙勇士': false, '铁皮': false, '漂移': false, '救护车': false, '战术蜂': false, '阿尔茜': false, '碎骨魔': false, '路障': false, '喷气机': false, '红蜘蛛': false, '热破': false, '黄蜂勇士': false, '通天晓': false, '搅拌者': false, '爆威': false, '探长': false },
+                data: ['战擎','大黄蜂','红蜘蛛','通天晓','恐龙勇士','战威','狂飙','暗黑擎天柱','汽车大师','碾碎器','斗擎','钢锁','猩猩队长','野牛','惊天雷','阿尔茜','雷震','碎骨魔','漂移','热破','探长','巨蝎勇士','风刃','路障','横炮','警车','小黄蜂','反冲','黄豹','爵士','幻影','犀牛','救护车','声波','震荡波','录音机','千斤顶','天火','铁皮','搅拌者','黄蜂勇士','爆威','喷气机','惊破天','震天尊',],
+                selected: {'战擎':false,'大黄蜂':false,'红蜘蛛':false,'通天晓':false,'恐龙勇士':false,'战威':false,'狂飙':false,'暗黑擎天柱':false,'汽车大师':false,'碾碎器':false,'斗擎':false,'钢锁':false,'猩猩队长':false,'野牛':false,'惊天雷':false,'阿尔茜':false,'雷震':false,'碎骨魔':false,'漂移':false,'热破':false,'探长':false,'巨蝎勇士':false,'风刃':false,'路障':false,'横炮':false,'警车':false,'小黄蜂':false,'反冲':false,'黄豹':false,'爵士':false,'幻影':false,'犀牛':false,'救护车':false,'声波':false,'震荡波':false,'录音机':false,'千斤顶':false,'天火':false,'铁皮':false,'搅拌者':false,'黄蜂勇士':false,'爆威':false,'喷气机':false,'惊破天':false,'震天尊':false,},
                 width: '50%',
                 // selectedMode: 'multiple',
                 textStyle: { fontSize: 24 },
@@ -52,7 +52,10 @@
                         color: '#fff',
                         backgroundColor: '#999',
                         borderRadius: 3,
-                        padding: [3, 5]
+                        padding: [3, 5],
+                        // formatter: function (value, indicator) {
+                        //     return '【' + value + '】';
+                        // }
                     }
                 },
                 indicator: [
@@ -70,52 +73,67 @@
                 type: 'radar',
                 // areaStyle: {normal: {}},
                 data: [
-                    { name: '震天尊', value: [9.46, 10, 8.75, 8.31, 5, 8,], },
-                    { name: '黄豹', value: [10, 7.11, 9.69, 9.46, 8, 6,], },
-                    { name: '警车', value: [9.46, 7.37, 8.44, 10, 7, 8,], },
-                    { name: '战擎', value: [8.11, 8.16, 7.81, 9.15, 10, 9,], },
-                    { name: '汽车大师', value: [8.92, 8.16, 8.13, 8.85, 6, 9,], },
-                    { name: '震荡波', value: [7.84, 8.42, 8.13, 8.31, 10, 8,], },
-                    { name: '斗擎', value: [8.92, 8.95, 6.25, 9.15, 7, 9,], },
-                    { name: '千斤顶', value: [8.38, 8.68, 8.13, 9.77, 6, 6,], },
-                    { name: '野牛', value: [9.46, 8.42, 6.88, 9.69, 8, 5,], },
-                    { name: '风刃', value: [8.65, 6.58, 8.75, 8.85, 8, 9,], },
-                    { name: '猩猩队长', value: [8.65, 8.95, 7.19, 8.31, 8, 5,], },
-                    { name: '战威', value: [8.38, 7.11, 9.38, 8.85, 8, 5,], },
-                    { name: '暗黑擎天柱', value: [7.57, 8.16, 7.81, 9.54, 7, 9,], },
-                    { name: '横炮', value: [10, 7.11, 7.19, 9.15, 5, 8,], },
-                    { name: '犀牛', value: [7.3, 7.63, 8.44, 8.69, 8, 9,], },
-                    { name: '声波', value: [8.92, 7.63, 7.5, 8.23, 6, 8,], },
-                    { name: '巨蝎勇士', value: [8.11, 7.89, 7.81, 9.08, 8, 6,], },
-                    { name: '惊天雷', value: [8.92, 8.42, 6.88, 8.85, 5, 7,], },
-                    { name: '碾碎器', value: [8.65, 8.16, 6.88, 8.77, 5, 9,], },
-                    { name: '爵士', value: [8.92, 6.84, 8.75, 8.54, 7, 5,], },
-                    { name: '录音机', value: [8.92, 6.84, 8.13, 8.54, 8, 6,], },
-                    { name: '雷震', value: [8.11, 7.63, 7.19, 8.46, 9, 8,], },
-                    { name: '幻影', value: [8.11, 7.37, 10, 9.38, 4, 4,], },
-                    { name: '反冲', value: [9.73, 7.11, 7.81, 8.23, 5, 6,], },
-                    { name: '侦查蜂', value: [8.92, 7.11, 7.81, 9.15, 5, 8,], },
-                    { name: '惊破天', value: [9.73, 7.63, 7.19, 9.15, 5, 5,], },
-                    { name: '天火', value: [8.11, 8.16, 8.13, 9.77, 7, 3,], },
-                    { name: '钢锁', value: [8.92, 8.68, 6.25, 9.15, 5, 6,], },
-                    { name: '狂飙', value: [7.57, 7.89, 7.81, 9.08, 6, 8,], },
-                    { name: '恐龙勇士', value: [8.11, 6.84, 7.5, 8.85, 10, 7,], },
-                    { name: '铁皮', value: [8.38, 7.11, 7.19, 9.77, 5, 10,], },
-                    { name: '漂移', value: [8.11, 7.37, 6.25, 9, 9, 9,], },
-                    { name: '救护车', value: [7.84, 7.89, 7.19, 7.62, 7, 7,], },
-                    { name: '战术蜂', value: [7.84, 7.63, 7.19, 8.08, 7, 7,], },
-                    { name: '阿尔茜', value: [8.65, 6.84, 6.88, 8.92, 5, 9,], },
-                    { name: '碎骨魔', value: [7.84, 6.84, 7.5, 9.54, 5, 9,], },
-                    { name: '路障', value: [8.92, 7.11, 7.19, 9.08, 5, 5,], },
-                    { name: '喷气机', value: [7.84, 7.11, 7.5, 8.92, 5, 6,], },
-                    { name: '红蜘蛛', value: [7.3, 6.58, 9.06, 8.77, 5, 5,], },
-                    { name: '热破', value: [7.84, 7.11, 7.19, 9.62, 5, 6,], },
-                    { name: '黄蜂勇士', value: [7.84, 7.63, 6.25, 8, 5, 8,], },
-                    { name: '通天晓', value: [7.3, 7.89, 6.88, 8.85, 6, 5,], },
-                    { name: '搅拌者', value: [7.3, 8.16, 7.19, 9.62, 5, 3,], },
-                    { name: '爆威', value: [7.84, 8.42, 6.25, 7.31, 5, 5,], },
-                    { name: '探长', value: [7.3, 7.37, 6.88, 8.77, 7, 3,], },
+                    { name: '震天尊', value: [9.46, 10, 8.75, 8.31, 6, 8.89,], },
+                    { name: '黄豹', value: [10, 7.11, 9.69, 9.46, 8, 6.67,], },
+                    { name: '警车', value: [9.46, 7.37, 8.44, 10, 7, 8.89,], },
+                    { name: '战擎', value: [8.11, 8.16, 7.81, 9.15, 10, 10,], },
+                    { name: '汽车大师', value: [8.92, 8.16, 8.13, 8.85, 6, 10,], },
+                    { name: '震荡波', value: [7.84, 8.42, 8.13, 8.31, 10, 8.89,], },
+                    { name: '斗擎', value: [8.92, 8.95, 6.25, 9.15, 7, 10,], },
+                    { name: '千斤顶', value: [8.38, 8.68, 8.13, 9.77, 6, 6.67,], },
+                    { name: '野牛', value: [9.46, 8.42, 6.88, 9.69, 8, 5.56,], },
+                    { name: '风刃', value: [8.65, 6.58, 8.75, 8.85, 8, 10,], },
+                    { name: '猩猩队长', value: [8.65, 8.95, 7.19, 8.31, 8, 5.56,], },
+                    { name: '战威', value: [8.38, 7.11, 9.38, 8.85, 8, 5.56,], },
+                    { name: '暗黑擎天柱', value: [7.57, 8.16, 7.81, 9.54, 7, 10,], },
+                    { name: '小黄蜂', value: [8.92, 7.11, 7.81, 9.15, 8, 7.78,], },
+                    { name: '犀牛', value: [7.03, 7.89, 8.44, 8.69, 8, 10,], },
+                    { name: '声波', value: [8.92, 7.63, 7.5, 8.23, 6, 8.89,], },
+                    { name: '横炮', value: [10, 7.11, 6.88, 9.15, 5, 8.89,], },
+                    { name: '惊天雷', value: [8.92, 8.42, 6.56, 8.85, 5, 8.89,], },
+                    { name: '碾碎器', value: [8.65, 8.16, 6.88, 8.77, 5, 10,], },
+                    { name: '铁皮', value: [8.38, 7.11, 7.19, 9.77, 8, 10,], },
+                    { name: '爵士', value: [8.92, 6.84, 8.75, 8.54, 7, 5.56,], },
+                    { name: '录音机', value: [8.92, 6.84, 8.13, 8.54, 8, 6.67,], },
+                    { name: '雷震', value: [8.11, 7.63, 7.19, 8.46, 9, 8.89,], },
+                    { name: '幻影', value: [8.11, 7.37, 10, 9.38, 4, 4.44,], },
+                    { name: '反冲', value: [9.73, 7.11, 7.81, 8.23, 5, 6.67,], },
+                    { name: '惊破天', value: [9.73, 7.63, 7.19, 9.15, 5, 5.56,], },
+                    { name: '巨蝎勇士', value: [8.11, 7.89, 7.81, 9.08, 8, 5.56,], },
+                    { name: '天火', value: [8.11, 8.16, 8.13, 9.77, 7, 3.33,], },
+                    { name: '钢锁', value: [8.92, 8.68, 6.25, 9.15, 5, 6.67,], },
+                    { name: '狂飙', value: [7.57, 7.89, 7.81, 9.08, 6, 8.89,], },
+                    { name: '阿尔茜', value: [9.46, 6.84, 6.88, 8.92, 5, 10,], },
+                    { name: '恐龙勇士', value: [8.11, 6.84, 7.5, 8.85, 10, 7.78,], },
+                    { name: '漂移', value: [8.11, 7.37, 6.25, 9, 9, 10,], },
+                    { name: '黄蜂勇士', value: [7.84, 7.11, 7.81, 8, 8, 8.89,], },
+                    { name: '救护车', value: [7.84, 7.89, 7.19, 7.62, 7, 7.78,], },
+                    { name: '大黄蜂', value: [7.84, 7.63, 7.19, 8.08, 7, 7.78,], },
+                    { name: '碎骨魔', value: [7.84, 6.84, 7.5, 9.54, 5, 10,], },
+                    { name: '路障', value: [8.92, 7.11, 7.19, 9.08, 5, 5.56,], },
+                    { name: '喷气机', value: [7.84, 7.11, 7.81, 8.92, 5, 6.67,], },
+                    { name: '红蜘蛛', value: [7.3, 6.58, 9.06, 8.77, 5, 5.56,], },
+                    { name: '热破', value: [7.84, 7.11, 7.19, 9.62, 5, 6.67,], },
+                    { name: '通天晓', value: [7.3, 7.89, 6.88, 8.85, 6, 5.56,], },
+                    { name: '搅拌者', value: [7.3, 8.16, 7.19, 9.62, 5, 3.33,], },
+                    { name: '爆威', value: [7.84, 8.42, 6.25, 7.31, 5, 5.56,], },
+                    { name: '探长', value: [7.3, 7.37, 6.88, 8.77, 7, 3.33,], },
                 ],
+                label: {
+                    normal: {
+                        show: true,
+                        borderColor: 'black',
+                        borderWidth: 1,
+                        padding: 2,
+                        backgroundColor: 'white',
+                        // backgroundColor: 'rgba(128,128,128,0.5)',
+                        // textBorderColor: 'auto',
+                        // textBorderWidth: 1,
+                        formatter: function (params) {
+                            return params.name + ': ' + params.value;
+                        }
+                    }
+                },
                 itemStyle: {
                     normal: {
                         areaStyle: {
